--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^3.6.0",
+    "@nuxt/eslint": "1.4.1",
+    "@nuxt/icon": "1.13.0",
+    "@nuxt/ui": "^3.1.3",
+    "@nuxtjs/supabase": "1.5.2",
+    "better-sqlite3": "^11.10.0",
+    "eslint": "^9.0.0",
     "nuxt": "^3.17.5",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
   },
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610",
+  "devDependencies": {
+    "@iconify-json/heroicons": "^1.2.2"
+  }
 }
