--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@pinia/nuxt": "^0.11.1",
     "better-sqlite3": "^11.10.0",
     "busboy": "^1.6.0",
+    "drizzle-kit": "^0.30.0",
+    "drizzle-orm": "^0.36.4",
     "eslint": "^9.0.0",
+    "fernet": "^0.3.3",
     "formidable": "^3.5.4",
     "localforage": "^1.10.0",
     "nuxt": "^3.17.5",
+    "pg": "^8.12.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
@@ -29,6 +33,7 @@
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610",
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
-    "@types/busboy": "^1.5.4"
+    "@types/busboy": "^1.5.4",
+    "@types/pg": "^8.11.10"
   }
 }
