--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/icon": "1.13.0",
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui": "^3.2.0",
+    "@nuxtjs/device": "^3.2.4",
     "@nuxtjs/supabase": "1.5.2",
     "@pinia/nuxt": "^0.11.1",
     "better-sqlite3": "^11.10.0",
