--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/device": "^3.2.4",
     "@nuxtjs/supabase": "1.5.2",
     "@pinia/nuxt": "^0.11.1",
+    "@scalar/nuxt": "^0.4.34",
     "better-sqlite3": "^11.10.0",
     "busboy": "^1.6.0",
     "drizzle-kit": "^0.30.0",
@@ -26,6 +27,7 @@
     "formidable": "^3.5.4",
     "localforage": "^1.10.0",
     "nuxt": "^3.17.5",
+    "nuxt-openapi-docs-module": "5.3.1",
     "pg": "^8.12.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.16",
