--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev --host 0.0.0.0",
+    "dev": "nuxt dev --port 3003",
+    "dev:mobile": "nuxt dev --host 0.0.0.0",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -30,6 +31,7 @@
     "nuxt-openapi-docs-module": "5.3.1",
     "pg": "^8.12.0",
     "pinia": "^3.0.3",
+    "sharp": "^0.34.3",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
   },
