--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pinia": "^3.0.3",
     "sharp": "^0.34.3",
     "vue": "^3.5.16",
+    "vue-advanced-cropper": "^2.8.9",
     "vue-router": "^4.5.1"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610",
