--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev --port 3003",
-    "dev:mobile": "nuxt dev --host 0.0.0.0",
+    "dev:mobile": "nuxt dev --host 0.0.0.0 --port 3003",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
